# dbt-cloud-migration-assistant

./: .gitignore  DELIVERY.md  FOR_PROSPECTS.md  INSTALL.md  LICENSE  Makefile  PUBLISH.md  PUSH_NOW.sh  QUICKSTART.md  README.md  SIMPLE_INSTRUCTIONS.md  build.sh  install.sh  publish-to-github.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
dbt_cloud_migration_assistant/: __init__.py  adapter_detector.py  cli.py  dagster_generator.py  dbt_cloud_client.py  git_discovery.py  profiles_generator.py
dbt_cloud_migration_assistant/components/: __init__.py  job.py  schedule.py  sensor.py
